# hfst-python

./: .gitignore  .gitmodules  MANIFEST.in  README.md  README.rst  VERSION  build_hfst.sh  build_macos_wheels.sh  build_wheels.sh  cibw_before_all.sh  cibw_before_all_linux.sh  cibw_before_all_macos.sh  cibw_before_all_windows.sh  clean.sh  get_so_name.py  pyproject.toml  setup.cfg  setup.py  test_builds.sh
.github/workflows/: build.yml
extensions/: hfst_pmatch_tokenize_extensions.cpp  hfst_sfst_extensions.cpp
hfst/: __init__.py  libhfst.i
hfst/exceptions/: __init__.py
old/: copy-files.sh
scripts/: before-build-macos.sh  brew_install_icu4c_arm64.sh  brew_install_icu4c_x86_64.sh  build_hfst.sh  build_libhfst_and_swig_linux.sh  build_libhfst_linux.sh  bump_version.py  cibw_before_all_linux.sh  cibw_before_all_macos.sh  cibw_before_all_windows.sh  clean.sh  ensure_bison_flex_installed.sh  ensure_bison_installed.sh  ensure_icu_installed.sh  generate_swig_wrapper.sh  get_latest_hfst.sh  linux_before_all.sh  macos_before_all.sh  macos_fix_links.sh  macos_switch_arch.sh  post-commit  pre-commit  run_install_nightly_macos.sh  win_before_all.sh
scripts/old/: build_macos_wheels.sh  cibw_before_all_macos.sh  ensure_icu_installed.sh  install_swig_from_src.sh  run_install_nightly_macos.sh  test_builds.sh
src/hfst/: Makefile  Makefile.am  Makefile.in  README  __init__.py  docstrings.i  hfst_extensions.cpp  hfst_pmatch_extensions.cpp  libhfst.i  libhfst.py  libhfst_wrap.cpp  version.py
src/hfst-old-pypi/: docstrings.i  hfst_lookup_extensions.cpp  libhfst.i  libhfst_wrap.cpp  setup.py
src/hfst-old-pypi/lib/: README.md
src/hfst-old-pypi/sfst_rules/: __init__.py
src/hfst-old-pypi/xerox_rules/: __init__.py
src/hfst/exceptions/: __init__.py
src/hfst/hfst/: __init__.py
src/hfst/hfst/sfst_rules/: __init__.py
src/hfst/hfst/xerox_rules/: __init__.py
src/hfst/sfst_rules/: __init__.py
src/hfst/xerox_rules/: __init__.py
test/: README  cat.prolog  cats_and_dogs_fail.prolog  foo_basic  foofile  streets.txt  test.bat  test.sfstpl  test7.py  test9.py  test_att_reader.py  test_dir_hfst.py  test_dir_hfst_exceptions.py  test_dir_hfst_sfst_rules.py  test_examples.py  test_exceptions.py  test_fail.xfst  test_hfst.py  test_lookup.py  test_old_libhfst.py  test_pass.xfst  test_pmatch.py  test_prolog.py  test_prolog_reader.py  test_read_att_transducer.py  test_streams.py  test_streams_1.py  test_streams_2.py  test_streams_all_2.py  test_streams_all_3.py  test_tokenizer.py  test_twolc.py  test_xerox_rules.py  test_xre.py  testfile.att  testfile1.att
test/resources/: cats_and_dogs.prolog  test.lexc  test1.twolc  test2.twolc  test3.twolc  testfile_unicode.att
test_old/: Makefile.am  test.sh  test2.py  test3.py  test4.py  test5.py  test8.py  test_att_reader.py  test_dir_hfst_exceptions.py  test_dir_hfst_sfst_rules.py  test_examples.py  test_hfst.py  test_lookup.py  test_prolog.py  test_prolog_reader.py  test_streams_all_1.py  test_twolc.py  test_xerox_rules.py  test_xre.py  testfile2.att  testfile_fail.att
