[metadata]
name = hfst
version = file: VERSION
author = HFST team
author_email = hfst-bugs@helsinki.fi
url = https://hfst.github.io/
description = Python interface for HFST
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNU GPL3
license_files = LICENSE
data_files=[]

[options]
include_package_data = True
py_modules = hfst.libhfst
python_requires = >=3.6
tests_require = pytest
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[flake8]
doctests = True
ignore = N802,N806
max-complexity = 10
