[metadata]
name = hfst
version = file: VERSION
author = HFST team
author_email = hfst-bugs@helsinki.fi
project_urls =
    Homepage = https://hfst.github.io/
    Documentation = https://github.com/hfst/python/wiki
    Repository = https://github.com/reynoldsnlp/hfst-python.git
description = Python SWIG-bound interface for HFST
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNU GPL3
license_files = LICENSE
keywords =
    Finite-state transducer
    morphology
    morphological
    part of speech
    tagger
    Natural Language Processing
    NLP
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities

[options]
include_package_data = True
py_modules = hfst.libhfst
python_requires = >=3.6
tests_require = pytest
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
