EXTRA_DIST = README test.sh \
	test_fail.xfst testfile.att testfile_fail.att testfile_unicode.att test_pass.xfst test.lexc test.sfstpl \
	cats_and_dogs.prolog cats_and_dogs_fail.prolog \
	test_pmatch.py test_prolog.py test_exceptions.py test_dir_hfst.py \
	test_dir_hfst_exceptions.py test_dir_hfst_sfst_rules.py test_tokenizer.py \
	test_read_att_transducer.py test_xre.py test_hfst.py test_examples.py \
	test_att_reader.py test_prolog_reader.py \
	test_streams_1.py test_streams_2.py test_streams_3.py streets.txt \
	test_streams_all_1.py test_streams_all_2.py test_streams_all_3.py \
	test_xerox_rules.py test_twolc.py test_lookup.py \
	test1.twolc test2.twolc test3.twolc
